2003-08-18  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* ==== Released 1.0.3 ====

	* configure.in: Version 1.0.3, Binary age 3, interface age 1.

2003-08-17  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* examples/Makefile.am (x11_programs): 
	* examples/simple-pbuffer-sgix.c: Added simple GLX_SGIX_pbuffer
	example.

	* README: 
	* docs/reference/gtkglext/building.sgml: 
	* configure.in: Removed --disable-sgi-fast-atoms configure
	option. Now GdkGLExt doesn't use XSGIFastInternAtom(), so this
	option is no longer needed.

	* gdk/x11/gdkglconfig-x11.c (gdk_gl_config_setup_colormap):
	New _gdk_x11_gl_overlay_get_info() function.

	* gdk/x11/gdkgloverlay-x11.h: 
	* gdk/x11/gdkgloverlay-x11.c (gdk_gl_overlay_get_sov_props) 
	(_gdk_x11_gl_overlay_get_info): Rewritten.

2003-08-16  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* gdk/x11/gdkglconfig-x11.c (gdk_gl_config_get_std_rgb_colormap):
	Use gdk_x11_get_xatom_by_name_for_display() instead of
	XInternAtom().

2003-08-15  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* README: 
	* README.win32: Updated CVS pserver info.

	* examples/Makefile.mingw (clean-obj): 
	* examples/Makefile.msc (clean-obj): Added clean-obj target for
	convenience.

	* Makefile.am (examples): 
	* examples/Makefile.am (all-local): Use all-local target for
	building example programs.

	* gdk/win32/gdkglpixmap-win32.c (gdk_gl_pixmap_new): 
	* gdk/win32/gdkglwindow-win32.c (gdk_gl_window_new): Do
	DescribePixelFormat().

	* gdk/win32/Makefile.am (gdkglext_win32_private_h_sources): 
	* gdk/win32/gdkinternal-win32.h: Removed.

	* gdk/win32/gdkglpixmap-win32.h (struct _GdkGLPixmapImplWin32): 
	* gdk/win32/gdkglpixmap-win32.c (gdk_gl_pixmap_new) 
	(gdk_gl_pixmap_sync_gl, gdk_gl_pixmap_sync_gdk): Don't use
	GdkPixmapImplWin32 private data. In the latest CVS version of
	GTK+, GdkPixmapImplWin32 data structure has been changed, so old
	code doesn't work. New code doesn't use GdkPixmap's internal data,