@@ -1,3 +1,9 @@
+2003-08-24  Naofumi Yasufuku  <naofumi@users.sourceforge.net>
+
+	* gdk/glext/gen-gdkgl*.pl: 
+	* gdk/glext/common-header.h: Read common header part from
+	common-header.h.
+
 2003-08-18  Naofumi Yasufuku  <naofumi@users.sourceforge.net>
 
 	* ==== Released 1.0.3 ====
